--- a/app-reactgaming/package.json
+++ b/app-reactgaming/package.json
@@ -2,7 +2,7 @@
   "name": "app-reactgaming",
   "version": "0.1.0",
   "private": false,
-  "homepage": "/react-gaming",
+  "homepage": "https://github.com/DurantChristian/react-gaming",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0"
   }
 }
