--- a/app-reactgaming/package.json
+++ b/app-reactgaming/package.json
@@ -2,7 +2,7 @@
   "name": "app-reactgaming",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://durantchristian.github.io/react-gaming",
+  "homepage": "/react-gaming",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
