--- a/app-reactgaming/package.json
+++ b/app-reactgaming/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -f",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0"
   }
 }
